# winrt-component-mingw

./: .gitignore  README.md
component/: .clangd  CMakeLists.txt  MinGWComponent.ComponentClass.cpp  MinGWComponent.ComponentClass.h  component.cs
cswinmd/: CsWinMD.deps.json  README.md
references/: README.md
test/cpp/: CMakeLists.txt  app.manifest  main.cpp
test/csharp/: ComponentTest.csproj  Program.cs  app.manifest
